local/logs/project.log
2018-06-15T17:16:10.238Z - normal: Load ~/.CocosCreator/settings.json
2018-06-15T17:16:10.254Z - normal: checking language setting...
2018-06-15T17:16:10.254Z - normal: Language: en
2018-06-15T17:16:12.185Z - success: protocol editor-framework registered
2018-06-15T17:16:12.186Z - success: protocol app registered
2018-06-15T17:16:12.186Z - success: protocol theme registered
2018-06-15T17:16:12.187Z - success: protocol packages registered
2018-06-15T17:16:12.187Z - success: protocol unpack registerred
2018-06-15T17:16:12.187Z - success: protocol disable-commonjs registerred
2018-06-15T17:16:15.183Z - normal: failed to connect login server due to request timeout
2018-06-15T17:16:15.185Z - normal: Check project C:\Users\tiagoluz\Documents\cocos
2018-06-15T17:16:15.187Z - normal: Initializing Cocos2d
2018-06-15T17:16:15.486Z - normal: Initializing Asset Database
2018-06-15T17:16:15.543Z - success: protocol uuid registerred
2018-06-15T17:16:15.544Z - success: protocol db registerred
2018-06-15T17:16:15.544Z - success: protocol thumbnail registerred
2018-06-15T17:16:15.544Z - normal: Loading editor/builtin packages
2018-06-15T17:16:15.581Z - success: anysdk loaded
2018-06-15T17:16:15.730Z - success: assets loaded
2018-06-15T17:16:15.733Z - success: builder loaded
2018-06-15T17:16:15.736Z - success: cocos-analytics loaded
2018-06-15T17:16:15.740Z - success: console loaded
2018-06-15T17:16:15.792Z - success: fb-instant-games loaded
2018-06-15T17:16:15.795Z - success: hierarchy loaded
2018-06-15T17:16:15.798Z - success: inspector loaded
2018-06-15T17:16:15.799Z - success: keystore loaded
2018-06-15T17:16:15.803Z - success: node-library loaded
2018-06-15T17:16:15.805Z - success: package-asset loaded
2018-06-15T17:16:15.808Z - success: preferences loaded
2018-06-15T17:16:15.810Z - success: project-exporter loaded
2018-06-15T17:16:15.828Z - success: project-importer loaded
2018-06-15T17:16:15.830Z - success: project-settings loaded
2018-06-15T17:16:15.833Z - success: ui-kit loaded
2018-06-15T17:16:15.835Z - success: ui-grid loaded
2018-06-15T17:16:15.837Z - success: scene loaded
2018-06-15T17:16:15.839Z - success: sprite-editor loaded
2018-06-15T17:16:15.845Z - success: store loaded
2018-06-15T17:16:15.850Z - success: timeline loaded
2018-06-15T17:16:15.851Z - normal: Loading builtin packages
2018-06-15T17:16:15.853Z - success: asset-db-debugger loaded
2018-06-15T17:16:15.855Z - success: code-editor loaded
2018-06-15T17:16:15.855Z - success: color-picker loaded
2018-06-15T17:16:15.857Z - success: package-manager loaded
2018-06-15T17:16:15.863Z - success: sdkbox loaded
2018-06-15T17:16:15.867Z - success: tester loaded
2018-06-15T17:16:15.869Z - success: ui-kit-preview-extra loaded
2018-06-15T17:16:15.870Z - success: ui-kit-preview loaded
2018-06-15T17:16:15.873Z - success: ui-tree loaded
2018-06-15T17:16:17.361Z - normal: Initializing project C:\Users\tiagoluz\Documents\cocos
2018-06-15T17:16:17.375Z - normal: Loading packages
2018-06-15T17:16:17.379Z - normal: Watching packages
2018-06-15T17:16:17.395Z - normal: Run Application
2018-06-15T17:16:19.014Z - success: preview server running at http://localhost:7456
2018-06-15T17:16:25.512Z - normal: 1.9.1
2018-06-15T17:16:33.291Z - error: { Error: connect ETIMEDOUT 211.151.21.150:443
    at Object.exports._errnoException (util.js:1050:11)
    at exports._exceptionWithHostPort (util.js:1073:20)
    at TCPConnectWrap.afterConnect [as oncomplete] (net.js:1097:14)
  code: 'ETIMEDOUT',
  errno: 'ETIMEDOUT',
  syscall: 'connect',
  address: '211.151.21.150',
  port: 443 }
    at C:\CocosCreator\resources\app.asar\share\login\lib\user.js:1:1441
    at ClientRequest.Https.request.on.e (C:\CocosCreator\resources\app.asar\share\login\lib\network.js:1:873)
    at emitOne (events.js:96:13)
    at ClientRequest.emit (events.js:191:7)
    at TLSSocket.socketErrorListener (_http_client.js:358:9)
    at emitOne (events.js:96:13)
    at TLSSocket.emit (events.js:191:7)
    at emitErrorNT (net.js:1283:8)
    at _combinedTickCallback (internal/process/next_tick.js:80:11)
2018-06-15T19:03:15.735Z - failed: load script [C:\Users\tiagoluz\Documents\cocos\temp\quick-scripts\assets\Jogador.js] failed : ReferenceError: required is not defined
    at __define (C:\Users\tiagoluz\Documents\cocos\temp\quick-scripts\assets\Jogador.js:7:18)
    at C:\Users\tiagoluz\Documents\cocos\temp\quick-scripts\assets\Jogador.js:64:13
    at Object.<anonymous> (C:\Users\tiagoluz\Documents\cocos\temp\quick-scripts\assets\Jogador.js:71:11)
    at Object.<anonymous> (C:\Users\tiagoluz\Documents\cocos\temp\quick-scripts\assets\Jogador.js:74:3)
    at Module._compile (module.js:571:32)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:488:32)
    at tryModuleLoad (module.js:447:12)
    at Function.Module._load (module.js:439:3)
    at Module.require (module.js:498:17)
2018-06-15T19:18:29.636Z - failed: [db-task][sync-changes] Failed to import asset C:\Users\tiagoluz\Documents\cocos\assets\Inimigo.js, message: Compile error: SyntaxError: C:/Users/tiagoluz/Documents/cocos/assets/Inimigo.js: Unexpected token, expected , (27:21)
  25 | 	},
  26 | 	
> 27 | 	tomarDano: fuction(){
     | 	                    ^
  28 | 		this.node.destroy();
  29 | 	},
  30 | 	
    at Parser.pp$5.raise (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp.expect (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1749:33)
    at Parser.pp$3.parseObj (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3978:12)
    at Parser.pp$3.parseExprAtom (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3719:19)
    at Parser.pp$3.parseExprSubscripts (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3494:19)
    at Parser.pp$3.parseMaybeUnary (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3474:19)
    at Parser.pp$3.parseExprOps (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3344:19)
2018-06-15T21:41:52.789Z - failed: Failed to drop asset 843ccce0-a655-4fec-93d2-76bb23e5d063, message: Error: Can not create node from cc.RawAsset
    at C:\CocosCreator\resources\app.asar\editor\page\scene-utils\utils.js:1:383
    at C:\CocosCreator\resources\engine\cocos2d\core\platform\CCAssetLibrary.js:130:25
    at EventEmitter.ipcRenderer.on.n (C:\CocosCreator\resources\app.asar\editor-framework\lib\renderer\ipc.js:1:4493)
    at emitMany (events.js:127:13)
    at EventEmitter.emit (events.js:204:7)
2018-06-15T21:42:01.247Z - failed: Failed to drop asset 843ccce0-a655-4fec-93d2-76bb23e5d063, message: Error: Can not create node from cc.RawAsset
    at C:\CocosCreator\resources\app.asar\editor\page\scene-utils\utils.js:1:383
    at C:\CocosCreator\resources\engine\cocos2d\core\platform\CCAssetLibrary.js:130:25
    at EventEmitter.ipcRenderer.on.n (C:\CocosCreator\resources\app.asar\editor-framework\lib\renderer\ipc.js:1:4493)
    at emitMany (events.js:127:13)
    at EventEmitter.emit (events.js:204:7)
2018-06-15T21:42:26.055Z - failed: Failed to drop asset 843ccce0-a655-4fec-93d2-76bb23e5d063, message: Error: Can not create node from cc.RawAsset
    at C:\CocosCreator\resources\app.asar\editor\page\scene-utils\utils.js:1:383
    at C:\CocosCreator\resources\engine\cocos2d\core\platform\CCAssetLibrary.js:130:25
    at EventEmitter.ipcRenderer.on.n (C:\CocosCreator\resources\app.asar\editor-framework\lib\renderer\ipc.js:1:4493)
    at emitMany (events.js:127:13)
    at EventEmitter.emit (events.js:204:7)
